--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -217,7 +217,7 @@ deny 178.218.144.51;
 deny 178.218.144.64;
 deny 178.218.144.96;
 deny 178.218.144.99;
-deny 178.31.178.35;
+deny 178.31.177.187;
 deny 179.43.128.16;
 deny 179.43.159.194;
 deny 179.43.159.195;
@@ -281,6 +281,7 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
+deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.165.190.111;
 deny 185.170.114.25;
@@ -897,6 +898,7 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
+deny 23.155.8.104;
 deny 23.165.104.119;
 deny 23.236.122.62;
 deny 23.26.133.152;
@@ -923,6 +925,7 @@ deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::3d;
@@ -1153,7 +1156,6 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
-deny 2a04:52c0:104:fe02::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:4b9e::1;
@@ -1381,6 +1383,7 @@ deny 2a0c:e300::23;
 deny 2a0d:3e83:1:b284::1;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:97c0:3e3:519::1;
+deny 2a0e:97c0:3ea:bc::1;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:ed78:7632;
 deny 2a0e:d602:1:14bc::2;
@@ -1430,6 +1433,7 @@ deny 31.133.0.210;
 deny 31.42.185.134;
 deny 35.0.127.52;
 deny 37.114.37.81;
+deny 37.114.41.119;
 deny 37.1.201.144;
 deny 37.120.190.85;
 deny 37.120.239.59;
@@ -1541,7 +1545,7 @@ deny 5.255.101.10;
 deny 5.255.103.190;
 deny 5.255.103.235;
 deny 5.255.104.202;
-deny 5.255.108.48;
+deny 5.255.108.220;
 deny 5.255.111.64;
 deny 5.255.114.171;
 deny 5.255.115.58;
@@ -1556,7 +1560,6 @@ deny 5.255.97.221;
 deny 5.255.98.151;
 deny 5.255.98.198;
 deny 5.255.98.23;
-deny 5.255.99.108;
 deny 5.255.99.124;
 deny 5.255.99.147;
 deny 5.255.99.5;
@@ -1577,7 +1580,7 @@ deny 54.36.209.254;
 deny 5.45.102.93;
 deny 5.45.104.176;
 deny 5.45.98.162;
-deny 54.86.89.195;
+deny 54.90.40.61;
 deny 62.133.45.2;
 deny 62.171.137.169;
 deny 62.182.83.179;
