--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -121,7 +120,6 @@ allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
 allow 135.125.205.25;
-allow 136.243.109.213;
 allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.162.249.209;
@@ -866,7 +864,6 @@ allow 217.146.2.41;
 allow 23.137.248.100;
 allow 23.137.248.69;
 allow 23.137.250.34;
-allow 23.137.250.83;
 allow 23.137.253.108;
 allow 23.137.253.109;
 allow 23.137.253.110;
@@ -900,7 +897,6 @@ allow 23.155.24.4;
 allow 23.155.24.6;
 allow 23.155.8.104;
 allow 23.165.104.119;
-allow 23.236.122.62;
 allow 23.26.133.152;
 allow 23.94.211.25;
 allow 2400:8901::f03c:93ff:fe68:23b3;
@@ -918,6 +914,7 @@ allow 2.58.56.43;
 allow 2.58.56.90;
 allow 2.58.95.35;
 allow 2.58.95.38;
+allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:93ff:fe2b:34f6;
 allow 2600:3c03::f03c:91ff:fe24:47be;
@@ -933,7 +930,6 @@ allow 2602:f9f3:0:2::8d;
 allow 2602:f9f3:0:2::91;
 allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:81a6::1;
-allow 2602:fc24:12:a679::1;
 allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
@@ -1539,13 +1535,14 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.3.124.197;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.190;
 allow 5.255.103.235;
 allow 5.255.104.202;
-allow 5.255.108.220;
+allow 5.255.108.48;
 allow 5.255.111.64;
 allow 5.255.114.171;
 allow 5.255.115.58;
@@ -1568,7 +1565,6 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.158.58.36;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
@@ -1632,6 +1628,7 @@ allow 82.153.138.24;
 allow 82.197.182.161;
 allow 82.221.131.5;
 allow 82.221.131.71;
+allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.115;
