--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -5,7 +5,6 @@ deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
 deny 103.172.134.26;
-deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.208.86.5;
 deny 103.251.167.10;
@@ -121,7 +120,6 @@ deny 128.31.0.13;
 deny 130.193.10.21;
 deny 130.193.15.186;
 deny 135.125.205.25;
-deny 136.243.109.213;
 deny 136.244.111.163;
 deny 138.59.18.110;
 deny 139.162.249.209;
@@ -866,7 +864,6 @@ deny 217.146.2.41;
 deny 23.137.248.100;
 deny 23.137.248.69;
 deny 23.137.250.34;
-deny 23.137.250.83;
 deny 23.137.253.108;
 deny 23.137.253.109;
 deny 23.137.253.110;
@@ -900,7 +897,6 @@ deny 23.155.24.4;
 deny 23.155.24.6;
 deny 23.155.8.104;
 deny 23.165.104.119;
-deny 23.236.122.62;
 deny 23.26.133.152;
 deny 23.94.211.25;
 deny 2400:8901::f03c:93ff:fe68:23b3;
@@ -918,6 +914,7 @@ deny 2.58.56.43;
 deny 2.58.56.90;
 deny 2.58.95.35;
 deny 2.58.95.38;
+deny 2600:3c00::f03c:91ff:fe73:f9ba;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:93ff:fe2b:34f6;
 deny 2600:3c03::f03c:91ff:fe24:47be;
@@ -933,7 +930,6 @@ deny 2602:f9f3:0:2::8d;
 deny 2602:f9f3:0:2::91;
 deny 2602:fc24:12:759::1;
 deny 2602:fc24:12:81a6::1;
-deny 2602:fc24:12:a679::1;
 deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:2b4::1;
 deny 2602:fc24:19:30::1;
@@ -1539,13 +1535,14 @@ deny 51.89.153.112;
 deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
+deny 52.3.124.197;
 deny 5.255.100.219;
 deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.103.190;
 deny 5.255.103.235;
 deny 5.255.104.202;
-deny 5.255.108.220;
+deny 5.255.108.48;
 deny 5.255.111.64;
 deny 5.255.114.171;
 deny 5.255.115.58;
@@ -1568,7 +1565,6 @@ deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 5.34.182.203;
-deny 54.158.58.36;
 deny 5.42.66.6;
 deny 5.42.80.232;
 deny 5.42.80.233;
@@ -1632,6 +1628,7 @@ deny 82.153.138.24;
 deny 82.197.182.161;
 deny 82.221.131.5;
 deny 82.221.131.71;
+deny 82.221.139.190;
 deny 83.217.9.73;
 deny 83.96.213.63;
 deny 83.97.20.115;
