--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -5,6 +5,7 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.208.86.5;
 set_real_ip_from 103.251.167.10;
@@ -17,6 +18,7 @@ set_real_ip_from 104.192.1.138;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.232.126;
 set_real_ip_from 104.219.236.100;
+set_real_ip_from 104.244.72.115;
 set_real_ip_from 104.244.72.132;
 set_real_ip_from 104.244.73.136;
 set_real_ip_from 104.244.73.190;
@@ -111,12 +113,14 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 118.163.74.160;
+set_real_ip_from 121.160.200.13;
 set_real_ip_from 121.78.28.175;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.10.21;
+set_real_ip_from 130.193.15.186;
 set_real_ip_from 135.125.205.25;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
@@ -166,6 +170,7 @@ set_real_ip_from 162.247.74.74;
 set_real_ip_from 162.251.5.152;
 set_real_ip_from 163.172.45.102;
 set_real_ip_from 163.5.143.76;
+set_real_ip_from 164.132.172.209;
 set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
 set_real_ip_from 171.25.193.20;
@@ -280,6 +285,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -694,12 +700,11 @@ set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
 set_real_ip_from 2001:1b60:2:1:3935:104:0:1;
-set_real_ip_from 2001:1b60:3:221:3132:102:0:1;
 set_real_ip_from 2001:1b60:3:221:4134:101:0:1;
-set_real_ip_from 2001:1b60:3:239:1003:103:0:1;
 set_real_ip_from 2001:1b60:3:239:1003:106:0:1;
 set_real_ip_from 200.122.181.2;
 set_real_ip_from 2001:40e8:0:f090::100;
+set_real_ip_from 2001:41d0:1008:20d1::1;
 set_real_ip_from 2001:41d0:2:9161::1;
 set_real_ip_from 2001:41d0:304:200::9dce;
 set_real_ip_from 2001:41d0:401:3200::3efd;
@@ -866,7 +871,6 @@ set_real_ip_from 23.137.253.108;
 set_real_ip_from 23.137.253.109;
 set_real_ip_from 23.137.253.110;
 set_real_ip_from 23.137.253.9;
-set_real_ip_from 23.152.24.77;
 set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
@@ -987,12 +991,14 @@ set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
 set_real_ip_from 2605:6400:30:f0ed:9151:66ed:6366:5c74;
 set_real_ip_from 2605:6400:30:f174::;
 set_real_ip_from 2605:6400:30:f174:1:1:1:1;
+set_real_ip_from 2605:6400:30:f174:1111:2222:3333:4444;
 set_real_ip_from 2605:6400:30:f174:1:2:3:4;
 set_real_ip_from 2605:6400:30:f174::42;
 set_real_ip_from 2605:6400:30:f174:42:42::;
 set_real_ip_from 2605:6400:30:f174:42:42:42:0;
 set_real_ip_from 2605:6400:30:f174:42:42:42:42;
 set_real_ip_from 2605:6400:30:f174:4:3:2:1;
+set_real_ip_from 2605:6400:30:f174:cafe::;
 set_real_ip_from 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 set_real_ip_from 2605:6400:30:f307:1712:1a11:9b1c:ab7f;
 set_real_ip_from 2605:6400:30:f307:3aa6:91d4:da12:7eee;
@@ -1025,6 +1031,7 @@ set_real_ip_from 2605:6400:30:f7ca::2;
 set_real_ip_from 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 set_real_ip_from 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 set_real_ip_from 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
+set_real_ip_from 2605:6400:30:f858:2704:73e1:7085:12ef;
 set_real_ip_from 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 set_real_ip_from 2605:6400:30:f8d5::1;
 set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
@@ -1439,8 +1446,7 @@ set_real_ip_from 37.252.255.135;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.254.131;
-set_real_ip_from 38.97.116.244;
-set_real_ip_from 44.221.21.230;
+set_real_ip_from 44.223.231.140;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
@@ -1643,8 +1649,6 @@ set_real_ip_from 85.93.218.204;
 set_real_ip_from 86.104.194.13;
 set_real_ip_from 87.118.110.27;
 set_real_ip_from 87.118.116.103;
-set_real_ip_from 87.118.116.90;
-set_real_ip_from 87.118.122.30;
 set_real_ip_from 87.118.122.51;
 set_real_ip_from 87.120.254.132;
 set_real_ip_from 88.209.197.213;
@@ -1682,6 +1686,7 @@ set_real_ip_from 91.208.75.153;
 set_real_ip_from 91.208.75.156;
 set_real_ip_from 91.208.75.178;
 set_real_ip_from 91.208.75.239;
+set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.210.59.57;
 set_real_ip_from 91.219.236.101;
@@ -1703,7 +1708,6 @@ set_real_ip_from 93.95.228.205;
 set_real_ip_from 93.95.230.165;
 set_real_ip_from 93.95.231.14;
 set_real_ip_from 93.95.231.88;
-set_real_ip_from 93.99.104.128;
 set_real_ip_from 93.99.104.138;
 set_real_ip_from 93.99.104.18;
 set_real_ip_from 93.99.104.194;
