--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -135,6 +134,7 @@ allow 143.110.156.176;
 allow 144.172.118.4;
 allow 144.172.118.55;
 allow 144.172.118.76;
+allow 144.172.73.11;
 allow 144.172.73.6;
 allow 144.217.80.80;
 allow 144.24.197.112;
@@ -658,7 +658,6 @@ allow 194.233.174.56;
 allow 194.26.192.77;
 allow 194.26.196.116;
 allow 194.26.196.71;
-allow 194.62.248.21;
 allow 195.160.220.104;
 allow 195.176.3.19;
 allow 195.176.3.20;
@@ -701,6 +700,7 @@ allow 199.195.253.180;
 allow 199.195.253.247;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
+allow 2001:1b60:3:221:3132:102:0:1;
 allow 2001:1b60:3:221:4134:101:0:1;
 allow 2001:1b60:3:239:1003:103:0:1;
 allow 2001:1b60:3:239:1003:106:0:1;
@@ -1071,7 +1071,6 @@ allow 2a00:1dc0:caff:99::d348;
 allow 2a00:99a0:0:1000::2;
 allow 2a01:4262:1ab:ffff::133;
 allow 2a01:5e0:36:c506::1;
-allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
@@ -1383,7 +1382,6 @@ allow 2a0c:e300::23;
 allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:3e3:519::1;
-allow 2a0e:97c0:3ea:372::1;
 allow 2a0e:97c0:3ea:bc::1;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:ed78:7632;
@@ -1427,12 +1425,12 @@ allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c826::2;
 allow 2a12:5940:f0a8::2;
 allow 2a12:8641:3:12::;
+allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 3.230.195.21;
 allow 35.0.127.52;
 allow 37.114.37.81;
 allow 37.114.41.119;
@@ -1449,6 +1447,7 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
+allow 44.196.177.150;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1651,6 +1650,7 @@ allow 85.93.218.204;
 allow 86.104.194.13;
 allow 87.118.110.27;
 allow 87.118.116.103;
+allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.254.132;
@@ -1710,9 +1710,7 @@ allow 93.95.228.205;
 allow 93.95.230.165;
 allow 93.95.231.14;
 allow 93.95.231.88;
-allow 93.99.104.128;
 allow 93.99.104.138;
-allow 93.99.104.18;
 allow 93.99.104.194;
 allow 94.102.51.15;
 allow 94.140.115.63;
