--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,6 +5,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -13,6 +14,7 @@ allow 103.253.24.18;
 allow 103.28.52.93;
 allow 104.167.242.116;
 allow 104.167.242.117;
+allow 104.167.242.118;
 allow 104.192.1.138;
 allow 104.192.3.74;
 allow 104.219.232.126;
@@ -845,7 +847,6 @@ allow 205.185.127.231;
 allow 209.135.168.56;
 allow 209.141.32.198;
 allow 209.141.37.94;
-allow 209.141.38.110;
 allow 209.141.46.203;
 allow 209.141.50.178;
 allow 209.141.51.180;
@@ -938,6 +939,7 @@ allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:95b7::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
+allow 2602:fccf:310:1::c;
 allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
@@ -1446,8 +1448,6 @@ allow 37.252.254.33;
 allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
-allow 38.242.254.131;
-allow 44.196.177.150;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1570,6 +1570,7 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.234.251.160;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
@@ -1631,6 +1632,7 @@ allow 82.118.242.36;
 allow 82.153.138.24;
 allow 82.221.131.71;
 allow 82.221.139.190;
+allow 82.68.49.227;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.115;
@@ -1710,6 +1712,7 @@ allow 93.95.228.205;
 allow 93.95.230.165;
 allow 93.95.231.14;
 allow 93.95.231.88;
+allow 93.99.104.128;
 allow 93.99.104.138;
 allow 93.99.104.194;
 allow 94.102.51.15;
